dist/ceph-csi-operator/NetworkPolicy.ceph-csi-operator-ceph-csi-controller-manager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: ceph-csi-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ceph-csi-operator
    app.kubernetes.io/version: v1.1.0
    helm.sh/chart: ceph-csi-operator-1.1.0
  name: ceph-csi-operator-ceph-csi-controller-manager
  namespace: ceph
spec:
  egress:
    - {}
  podSelector:
    matchLabels:
      control-plane: ceph-csi-op-controller-manager
  policyTypes:
    - Ingress
    - Egress
